// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSpinner > snapshots > matches snapshot for default variant 1`] = `
<div
  aria-live="polite"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin h-4 w-4 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;

exports[`LoadingSpinner > snapshots > matches snapshot for large size 1`] = `
<div
  aria-live="polite"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin h-6 w-6 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;

exports[`LoadingSpinner > snapshots > matches snapshot for primary variant 1`] = `
<div
  aria-live="polite"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin h-4 w-4 text-blue-600 dark:text-blue-400"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;
